--- a/exper/src/app/components/register/register.component.html
+++ b/exper/src/app/components/register/register.component.html
@@ -27,7 +27,7 @@
             <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
           </div>
         </div>
-        <div class="row mb-2">Already have an account? <span class="btn-sign-in">Sign in</span></div>
+        <div class="row custom-row">Already have an account? <span class="btn-sign-in">Sign in</span></div>
         
         
         <div class="row justify-content-center"> 
