--- a/exper/src/app/components/register/register.component.scss
+++ b/exper/src/app/components/register/register.component.scss
@@ -52,6 +52,11 @@
     }
   }
 
+  .custom-row {
+    padding: 5px 15px;
+    margin-bottom: 10px;
+  }
+
   .btn-sign-in {
     color: dodgerblue;
 
