--- a/exper/src/app/components/register/register.component.html
+++ b/exper/src/app/components/register/register.component.html
@@ -1,38 +1,37 @@
 <div class="container">
-  <div class=" logo-container">
-    <img class="logo-img-primary" src="../../../assets/images/logo2.svg">
-    <img class="logo-img" src="../../../assets/images/logo.svg">
+  <div class="logo-container">
+    <img class="logo" src="../../../assets/images/logo.svg">
   </div>
 
   <div class="row justify-content-center mb-2">
-    Exper
+    <p class="title">Exper</p>
   </div>
   <div class="col-sm-6">
   
     <form [formGroup]="signupForm">
       <div class="form-container">
-        <input type="text" class="form-control custom-form-control" placeholder="Email"> 
+        <input type="text" class="form-control custom-form-control" placeholder="Email" autocomplete="off"> 
       </div>
       
         <div class="form-container">
           <div class="password-form">
-            <input type="password" class="form-control custom-form-control" placeholder="Password">
+            <input type="password" class="form-control custom-form-control" placeholder="Password" autocomplete="off">
             <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
           </div>
         </div>
         
-        <div class="form-container">
-          <div class="password-form">
-            <input type="password" class="form-control custom-form-control" placeholder="Confirm password">
-            <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
-          </div>
+        <div class="password-form">
+          <input type="password" class="form-control custom-form-control" placeholder="Confirm password">
+          <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
         </div>
-        <div class="row custom-row">Already have an account? <span class="btn-sign-in">Sign in</span></div>
+     
+        <div class="row custom-row">
+          Already have an account? &nbsp; 
+          <span class="btn-sign-in">Sign in</span>
+        </div>
         
-        
-        <div class="row justify-content-center"> 
-          <button class="btn btn-primary"> <img src="../../../assets/images/sign_in.svg"> Sign up</button>
-
+        <div class="row justify-content-center btn-container"> 
+          <button class="btn custom-btn-primary"> <img src="../../../assets/images/sign_in.svg"> SIGN UP</button>
         </div>
    
     </form>
