--- a/exper/src/app/components/register/register.component.html
+++ b/exper/src/app/components/register/register.component.html
@@ -8,35 +8,69 @@
   </div>
   <div class="col-sm-6">
   
-    <form [formGroup]="signupForm">
+    <form [formGroup]="signupForm" (ngSubmit)="register()">
       <div class="form-container">
-        <input type="text" class="form-control custom-form-control" placeholder="Email" autocomplete="off"> 
+        <input 
+          type="text" 
+          class="form-control custom-form-control"  
+          placeholder="Email" 
+          autocomplete="off"
+          formControlName="email"> 
+        <span
+          *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
+          class="error-text"
+          >
+          Invalid email address
+        </span>
       </div>
       
         <div class="form-container">
           <div class="password-form">
-            <input type="password" class="form-control custom-form-control" placeholder="Password" autocomplete="off">
+            <input 
+            type="password" 
+            class="form-control custom-form-control" 
+            placeholder="Password" 
+            autocomplete="off"
+            formControlName="password">
             <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
           </div>
+          <span
+          *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched"
+          class="error-text"
+          >
+          Invalid password
+        </span>
         </div>
         
-        <div class="password-form">
-          <input type="password" class="form-control custom-form-control" placeholder="Confirm password">
-          <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
-        </div>
+        <div class="form-container">
+          <div class="password-form">
+            <input 
+              type="password" 
+              class="form-control custom-form-control" 
+              placeholder="Confirm password"
+              formControlName="confirmPassword">
+            <img class="btn-red-eye" src="../../../assets/images/red_eye.svg">
+          </div>
+          <span
+          *ngIf="signupForm.get('confirmPassword').touched && signupForm.hasError('notSame')"
+          class="error-text"
+          >
+          Passwords don't match
+        </span>
+      </div>
      
-        <div class="row custom-row">
-          Already have an account? &nbsp; 
-          <span class="btn-sign-in">Sign in</span>
-        </div>
-        
-        <div class="row justify-content-center btn-container"> 
-          <button class="btn custom-btn-primary"> <img src="../../../assets/images/sign_in.svg"> SIGN UP</button>
-        </div>
-   
+      <div class="row custom-row">
+        Already have an account? &nbsp; 
+        <span class="btn-sign-in">Sign in</span>
+      </div>
+      
+      <div class="row justify-content-center btn-container"> 
+        <button 
+          type="submit" 
+          class="btn custom-btn-primary"
+          [ngClass]="{'disabled': !signupForm.valid}"
+        > <img src="../../../assets/images/sign_in.svg"> SIGN UP</button>
+      </div>
     </form>
-
-
-    
   </div>
 </div>
