login component - phase 1 + redirect to register/login

--- a/exper/src/app/components/register/register.component.html
+++ b/exper/src/app/components/register/register.component.html
@@ -38,7 +38,7 @@
     
       <div class="row custom-row">
         Already have an account? &nbsp; 
-        <span class="btn-sign-in">Sign in</span>
+        <span class="btn-sign-in" (click)="redirectToLogin()">Sign in</span>
       </div>
       
       <div class="row justify-content-center btn-container"> 
