--- a/exper/src/app/components/login/login.component.html
+++ b/exper/src/app/components/login/login.component.html
@@ -19,8 +19,8 @@
         <div class="form-container">
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
-            <input matInput type="password" placeholder="Password" formControlName="password">
-            <mat-icon matSuffix>remove_red_eye</mat-icon>
+            <input matInput [type]="showPassword ? 'text' : 'password'" placeholder="Password" formControlName="password">
+            <mat-icon matSuffix (click)="togglePasswordVisibility()">remove_red_eye</mat-icon>
           </mat-form-field>
         </div>
   
