--- a/exper/src/app/components/login/login.component.html
+++ b/exper/src/app/components/login/login.component.html
@@ -13,6 +13,7 @@
             <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
               <input matInput placeholder="Email" formControlName="email">
+              <mat-hint *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="error-text">Please enter a valid email address</mat-hint>
             </mat-form-field>
         </div>
         
@@ -20,11 +21,12 @@
           <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
             <input matInput [type]="showPassword ? 'text' : 'password'" placeholder="Password" formControlName="password">
+            <mat-hint *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched" class="error-text">Please enter your password</mat-hint>
             <mat-icon matSuffix (click)="togglePasswordVisibility()">remove_red_eye</mat-icon>
           </mat-form-field>
         </div>
   
-        <div class="row custom-row">
+        <div class="row custom-row mt-3">
           Don't have an account? &nbsp; 
           <span class="btn-sign-in" (click)="redirectToSignUp()">Sign up</span>
         </div>
