--- a/exper/src/app/components/dashboard/members/members.component.html
+++ b/exper/src/app/components/dashboard/members/members.component.html
@@ -1,5 +1,5 @@
-<div class="row row-member">
-  <div class="col-10 col-email">
+<div class="row-member">
+  <div class="col-10 col-text">
     {{trip.users.length}} Members are on this trip.
   </div>
   <div class="col-2 col-add">
@@ -12,8 +12,8 @@
 <mat-divider></mat-divider>
 
 <ng-container *ngFor="let user of trip.users">
-  <div class="row row-member">
-    <div class="col-10 col-email">
+  <div class="row-member">
+    <div class="col-10 col-text">
       {{user.email}}
     </div>
     <div class="col-2 col-delete">
