--- a/exper/src/app/components/dashboard/members/members.component.scss
+++ b/exper/src/app/components/dashboard/members/members.component.scss
@@ -9,16 +9,19 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    padding: 0 8px 0 0;
   }
 
-  .col-email {
-    
+  .col-text {
+    padding: 0 0 0 16px;
+    font-size: 16px;
   }
   
   .col-delete {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: rgba(0, 0, 0, 0.6);
+    padding: 0 8px 0 0;
   }
 }
