--- a/exper/src/app/dialogs/add-members/add-members.component.html
+++ b/exper/src/app/dialogs/add-members/add-members.component.html
@@ -1,30 +1,37 @@
+<div class="container">
+  <div class="title">Add members</div>
 
-<mat-form-field class="example-full-width">
-  <input matInput type="text" placeholder="Email" #input="ngModel" [(ngModel)]="email" />
-</mat-form-field> 
+  <mat-form-field appearance="outline" class="email-form-field">
+    <input matInput type="text" placeholder="Search friends by email" #input="ngModel" [(ngModel)]="email" class="email-input" />
+  </mat-form-field> 
+  
+</div>
 
-<div *ngFor="let member of checkedUsers">
-  <div class="row align-items-center">
-    <div class="col-10"> 
-      {{member.email}} 
+<div *ngFor="let user of checkedUsers">
+  <div class="user-row">
+    <div class="col-10 col-text"> 
+      {{user.email}} 
     </div>
     <div class="col-2">
       <mat-checkbox 
         class="example-margin"
-        [checked]="member.checked"
-        (change)="updateUser(member, $event)">
+        [checked]="user.checked"
+        (change)="updateUser(user, $event)">
       </mat-checkbox>
     </div>
   </div>
+  <mat-divider></mat-divider>
 </div>
 
-<mat-divider></mat-divider>
-
-<div class="row">
-  <button  mat-button (click)="onNoClick()">
-    CANCEL
-  </button>
-  <button  mat-button (click)="onSave()">
-    SAVE
-  </button>
+<mat-divider *ngIf="checkedUsers.length > 0"></mat-divider>
+<div>
+  <div class="btn-row" *ngIf="checkedUsers.length > 0">
+    <button mat-button (click)="onSave()">
+      SAVE
+    </button>
+    <button mat-button (click)="onNoClick()">
+      CANCEL
+    </button>
+  
+  </div>
 </div>
