add trip component

--- a/exper/src/app/components/dashboard/dashboard.component.html
+++ b/exper/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header (updatedTrips)="getUpdatedTrips($event)"></app-header>
 <div class="trips-container">
-  <app-trip> </app-trip>
+  <app-trip [updatedTrips]="updatedTrips"> </app-trip>
 </div>
