--- a/exper/src/app/shared/components/header/header.component.html
+++ b/exper/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
   <span class="title">Exper</span>
   <span class="example-spacer"></span>
   <div class="buttons-container">
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="openAddTripDialog()">
       <mat-icon>add</mat-icon>
     </button>
     
