--- a/exper/src/app/components/dashboard/trip/trip.component.html
+++ b/exper/src/app/components/dashboard/trip/trip.component.html
@@ -21,7 +21,7 @@
         </div>
       </ng-template>
       <ng-template matTabContent>
-        <app-members [trip]="trip"></app-members>
+        <app-members [trip]="trip" (deletedUser)="handleDeletedUser(trip, $event)"></app-members>
       </ng-template>
     </mat-tab>
 
@@ -32,6 +32,9 @@
             <span>GROUP</span>    
         </div>
       </ng-template>
+      <ng-template matTabContent>
+        <app-group [trip]="trip"></app-group>
+      </ng-template>
     </mat-tab>
 
     <mat-tab>
@@ -40,6 +43,9 @@
             <mat-icon>person</mat-icon>
             <span>PERSONAL</span>    
         </div>
+      </ng-template>
+      <ng-template matTabContent>
+        <app-personal-expenses [trip]="trip"></app-personal-expenses>
       </ng-template>
     </mat-tab>
 
