--- a/exper/src/app/dialogs/add-group-expense/add-group-expense.component.scss
+++ b/exper/src/app/dialogs/add-group-expense/add-group-expense.component.scss
@@ -1,9 +1,9 @@
 .title {
-  font-family: roboto-regular;
-  font-size: 16px;
-  margin-bottom: 20px;
+    font-family: 'roboto-regular';
+    font-size: 16px;
+    margin-bottom: 20px;
 }
-
+  
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background, 
 .mat-checkbox-indeterminate .mat-checkbox-background {
   background-color: black !important;
@@ -23,15 +23,10 @@
   width: 24px;
 }
 
-:host ::ng-deep .mat-form-field-flex{
-  height: 42px;
-  line-height: 0;
-}
-
 .email-form-field {
   width: 100%;
-  height: 56px !important;
-  max-height: 56px;
+  height: 60px !important;
+  max-height: 60px;
 }
 
 .btn-row {
@@ -41,13 +36,12 @@
   margin-bottom: 0;
 }
 
-.custom-form-control {
-  height: 56px;
-  border: 1px solid #2C3539;
+:host ::ng-deep .mat-form-field-infix {
+  padding: 10px 0 15px 0;
 }
 
-:host ::ng-deep .mat-form-field-infix {
-  padding: 0px 0 5px 0;
+.mat-form-field {
+  height: 80px !important;
 }
 
 .user-row {
@@ -59,4 +53,30 @@
 
 .container {
   padding: 0 16px;
+}
+
+.split-row{
+    align-items: flex-end;
+    margin-top: 15px;  
+}
+
+.split-text {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: 'roboto-regular';
+  padding-left: 25px;
+}
+
+:host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  color: rgba(0,0,0, 0.9);
+}
+
+.form-container {
+    margin-top: 15px;
+}
+
+.members-container {
+  margin-top: 15px;
+  height: 250px;
+  overflow: scroll;
 }
