--- a/exper/src/app/shared/components/header/header.component.scss
+++ b/exper/src/app/shared/components/header/header.component.scss
@@ -26,3 +26,17 @@ $primary-color: #1B82E6;
     flex-direction: row;
     align-items: center;
 }
+
+.notifications-button {
+    position: relative;
+}
+
+.notifications-container {
+    position: absolute;
+    right: 0;
+    top: 50px;
+    width: 250px;
+    max-width: 250px;
+    z-index: 3;
+    border: 1px solid rgba(0,0,0,0.1);
+}
