--- a/exper/src/fonts.scss
+++ b/exper/src/fonts.scss
@@ -1,31 +1,31 @@
 @font-face {
   font-family: confortaa-bold;
-  src: url(assets/fonts/confortaa/Comfortaa-Bold.ttf) format("opentype");
+  src: url(./assets/fonts/confortaa/Comfortaa-Bold.ttf) format("opentype");
 }
 
 @font-face {
   font-family: confortaa-regular;
-  src: url(assets/fonts/confortaa/Comfortaa-Regular.ttf) format("opentype");
+  src: url(./assets/fonts/confortaa/Comfortaa-Regular.ttf) format("opentype");
 }
   
 @font-face {
   font-family: confortaa-light;
-  src: url(assets/fonts/confortaa/Comfortaa-Light.ttf) format("opentype");
+  src: url(./assets/fonts/confortaa/Comfortaa-Light.ttf) format("opentype");
 }
 
 @font-face {
   font-family: confortaa-medium;
-  src: url(assets/fonts/confortaa/Comfortaa-Medium.ttf) format("opentype");
+  src: url(./assets/fonts/confortaa/Comfortaa-Medium.ttf) format("opentype");
 }
 
 @font-face {
   font-family: confortaa-semibold;
-  src: url(assets/fonts/confortaa/Comfortaa-SemiBold.ttf) format("opentype");
+  src: url(./assets/fonts/confortaa/Comfortaa-SemiBold.ttf) format("opentype");
 }
 
 @font-face {
   font-family: roboto-regular;
-  src: url(assets/fonts/roboto/Roboto-Regular.ttf) format("opentype");
+  src: url(./assets/fonts/roboto/Roboto-Regular.ttf) format("opentype");
 }
 
 
