--- a/exper/src/app/shared/components/header/notifications/notifications.component.scss
+++ b/exper/src/app/shared/components/header/notifications/notifications.component.scss
@@ -3,28 +3,24 @@
 }
 
 .title {
-  font-family: 'Roboto' sans-serif;
+  font-family: 'Roboto'sans-serif;
   font-size: 16px;
   font-weight: bold;
   color: black;
 }
 
 .subtitle {
-  font-family: 'Roboto' sans-serif;
-  font-size: 12px;
+  margin-bottom: 0;
+  font-family: 'Roboto'sans-serif;
+  font-size: 16px;
   color: black;
 }
 
 .content {
-  font-family: 'Roboto' sans-serif;
-  font-size: 10px;
+  margin-bottom: 0;
+  font-family: 'Roboto'sans-serif;
+  font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
-}
-
-.notification-container {
-  padding: 10px 15px;
-}
-
-.btn-close {
-  color: black;
+  white-space: pre-line;
+  overflow: hidden;
 }
