Update titles for consistency

--- a/exper/src/app/dialogs/update-group-expense/update-group-expense.component.html
+++ b/exper/src/app/dialogs/update-group-expense/update-group-expense.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="title">Add Group Expense</div>
+  <div class="title">Edit Group Expense</div>
 </div>
   
 <mat-divider></mat-divider>
