--- a/exper/src/app/dialogs/update-personal-expense/update-personal-expense.component.html
+++ b/exper/src/app/dialogs/update-personal-expense/update-personal-expense.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="title">Update Group Expense</div>
+    <div class="title">Edit Personal Expense</div>
 </div>
   
 <mat-divider></mat-divider>
