Hide the delete member button if the member is the current user or the trip owner

--- a/exper/src/app/components/dashboard/members/members.component.html
+++ b/exper/src/app/components/dashboard/members/members.component.html
@@ -19,7 +19,7 @@
     <div class="col-10 col-text">
       {{user.email}}
     </div>
-    <div class="col-2 col-delete">
+    <div *ngIf="user.canDelete" class="col-2 col-delete">
       <button mat-icon-button (click)="deleteTripUser(user)">
           <mat-icon>clear</mat-icon>
       </button>
